update validation; adjust css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@500&family=Orbitron:wght@500&family=Roboto:ital,wght@0,300;0,900;1,300&display=swap" rel="stylesheet"> 
     <script src="scripts.js" defer></script> 
     <title>Sign-up!</title>
 </head>
@@ -60,9 +63,10 @@
         <input type="password" id="pwd-repeat" name="pwd-repeat" required>
     </div>
     </form>
-    <button type="submit" id="button" form="signUpForm">Create Account</button>
+    
 </section>
-<p>Already have an account? <a href="#">Log in</a></p>
+<button type="submit" id="button" form="signUpForm">Create Account</button>
+<p class="login">Already have an account? <a href="#">Log in</a></p>
 </section>
 </div>
 
